Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,11 +290,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "change this to different elements"
+         ],
+         "type": "bar",
+         "uid": "232a927e-8716-11e9-9b3e-d3ded67f7d4f",
+         "x": [
+          "change this to different elements"
+         ],
+         "y": []
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"dde1c1c4-3b97-46a1-8ea8-906fc1b0f2a4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dde1c1c4-3b97-46a1-8ea8-906fc1b0f2a4\", [{\"name\": \"populations\", \"text\": [\"change this to different elements\"], \"x\": [\"change this to different elements\"], \"y\": [], \"type\": \"bar\", \"uid\": \"23315064-8716-11e9-9b3e-d3ded67f7d4f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"dde1c1c4-3b97-46a1-8ea8-906fc1b0f2a4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"dde1c1c4-3b97-46a1-8ea8-906fc1b0f2a4\", [{\"name\": \"populations\", \"text\": [\"change this to different elements\"], \"x\": [\"change this to different elements\"], \"y\": [], \"type\": \"bar\", \"uid\": \"23315064-8716-11e9-9b3e-d3ded67f7d4f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
