Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -350,10 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []"
@@ -361,10 +359,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "trace_areas = {'x': names_and_ranks, 'y': city_areas, 'text': names_and_ranks, 'type': 'bar', 'name': 'areas'}"
@@ -372,11 +368,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "name": "populations",
+         "text": [
+          "change this to different elements"
+         ],
+         "type": "bar",
+         "uid": "2b38fcb2-8716-11e9-9b3e-d3ded67f7d4f",
+         "x": [
+          "change this to different elements"
+         ],
+         "y": []
+        },
+        {
+         "name": "areas",
+         "text": [
+          "change this to different elements"
+         ],
+         "type": "bar",
+         "uid": "2b38fff0-8716-11e9-9b3e-d3ded67f7d4f",
+         "x": [
+          "change this to different elements"
+         ],
+         "y": []
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"9652c297-af33-40c0-bdcd-37fa9c4dbd56\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9652c297-af33-40c0-bdcd-37fa9c4dbd56\", [{\"name\": \"populations\", \"text\": [\"change this to different elements\"], \"x\": [\"change this to different elements\"], \"y\": [], \"type\": \"bar\", \"uid\": \"2b413cce-8716-11e9-9b3e-d3ded67f7d4f\"}, {\"name\": \"areas\", \"text\": [\"change this to different elements\"], \"x\": [\"change this to different elements\"], \"y\": [], \"type\": \"bar\", \"uid\": \"2b413f9e-8716-11e9-9b3e-d3ded67f7d4f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"9652c297-af33-40c0-bdcd-37fa9c4dbd56\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9652c297-af33-40c0-bdcd-37fa9c4dbd56\", [{\"name\": \"populations\", \"text\": [\"change this to different elements\"], \"x\": [\"change this to different elements\"], \"y\": [], \"type\": \"bar\", \"uid\": \"2b413cce-8716-11e9-9b3e-d3ded67f7d4f\"}, {\"name\": \"areas\", \"text\": [\"change this to different elements\"], \"x\": [\"change this to different elements\"], \"y\": [], \"type\": \"bar\", \"uid\": \"2b413f9e-8716-11e9-9b3e-d3ded67f7d4f\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
